--- a/_posts/2003-04-02-sosialt.md
+++ b/_posts/2003-04-02-sosialt.md
@@ -2,6 +2,6 @@
 layout: post
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
-<p>Oslo.pm sitt medlemsmøte <strong>2. april 2003</strong> er blitt avlyst
+<p>Oslo.pm sitt medlemsmÃ¸te <strong>2. april 2003</strong> er blitt avlyst
 grunnet lav interesse.</p>
 
