--- a/_posts/2004-04-14-sosialt.md
+++ b/_posts/2004-04-14-sosialt.md
@@ -2,9 +2,9 @@
 layout: post
 title: Neste sosiale sammenkomst i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>14. april 2004,
-klokken 18:00</strong> (<em>ikke</em> første onsdag
-måneden, grunnet påsken.) Vi satser på en hyggelig
-stund som vanlig på <strong>Pastiz, Tordenskioldsgate 10
-v/Rådhuset</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>14. april 2004,
+klokken 18:00</strong> (<em>ikke</em> fÃ¸rste onsdag
+mÃ¥neden, grunnet pÃ¥sken.) Vi satser pÃ¥ en hyggelig
+stund som vanlig pÃ¥ <strong>Pastiz, Tordenskioldsgate 10
+v/RÃ¥dhuset</strong>.</p>
 
