--- a/_posts/2004-08-04-sosialt.md
+++ b/_posts/2004-08-04-sosialt.md
@@ -2,9 +2,9 @@
 layout: post
 title: Neste sosiale sammenkomst i Oslo.pm
 ---
-<p>Oslo.pm har hatt pause i sommer, og satser på å komme i
-gang igjen med sosialt medlemsmøte <strong>4. august 2004,
-klokken 18:00</strong> Vi satser på en hyggelig
-stund som vanlig på <strong>Pastiz, Tordenskioldsgate 10
-v/Rådhuset</strong>.</p>
+<p>Oslo.pm har hatt pause i sommer, og satser pÃ¥ Ã¥ komme i
+gang igjen med sosialt medlemsmÃ¸te <strong>4. august 2004,
+klokken 18:00</strong> Vi satser pÃ¥ en hyggelig
+stund som vanlig pÃ¥ <strong>Pastiz, Tordenskioldsgate 10
+v/RÃ¥dhuset</strong>.</p>
 
