--- a/_posts/2005-11-02-perl6.md
+++ b/_posts/2005-11-02-perl6.md
@@ -4,7 +4,7 @@ title: Faglig-sosialt medlemsm&oslash;te om perl6
 ---
 <p>Introduksjon til Perl 6, av Rune Nilsen</p>
 
-<p>Tema som vil bli berørt er:</p>
+<p>Tema som vil bli berÃ¸rt er:</p>
 
 <ul>
  <li> Syntax-endringer</li>
@@ -25,6 +25,6 @@ title: Faglig-sosialt medlemsm&oslash;te om perl6
 
 <p>Rune Nilsen (rune@iknowhow.no) driver firmaet Interactive
 Know-How AS, er innleid som systemarktitekt i <a href="http://www.tinde.no/" title="Hjemmesiden til Tinde">Tinde
-ASA</a>, og har jobbet med perl i større internett-prosjekter
+ASA</a>, og har jobbet med perl i stÃ¸rre internett-prosjekter
 siden 1996.</p>
 
