--- a/_posts/2006-10-04-iusethis.md
+++ b/_posts/2006-10-04-iusethis.md
@@ -22,6 +22,6 @@ title: Faglig-sosialt medlemsm&oslash;te om web-applikasjoner!
 
 
 <p>Foredraget vil vare i 1-2 timer, og etter det faglige vil vi forflytte
- oss til et egnet utested i nærheten for å sosialisere. </p>
+ oss til et egnet utested i nÃ¦rheten for Ã¥ sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
