--- a/_posts/2006-11-01-stifting.md
+++ b/_posts/2006-11-01-stifting.md
@@ -2,18 +2,18 @@
 layout: post
 title: Oslo.pm skal stiftes!
 ---
-<h4>Møtedetaljer</h4>
+<h4>MÃ¸tedetaljer</h4>
 <pre>    Sted: Linpro A/S, Vitaminveien 1 A (v/Storo-krysset, <a href="http://kart.gulesider.no/kart/map.c?id=a_1250847" title="Link til karttjeneste">se kart</a>)
     Tid:  1. november 2006, kl. 18:00 og utover.</pre>
 
 <h4>Agenda</h4>
-<pre>0. Åpning
+<pre>0. Ã…pning
 
 1. Lightning Talks (5-minutters foredrag)
    Rune Nilsen (Tinde)
    Trym Skaar (inviso.no)
    Salve J. Nilsen (met.no)
-   .... (andre som har lyst å holde et Lightning Talk?)
+   .... (andre som har lyst Ã¥ holde et Lightning Talk?)
 
 2. Konstituering
    a) Valg av ordstyrer
@@ -24,17 +24,17 @@ title: Oslo.pm skal stiftes!
 3. Diverse
    a) Diskusjon om vedtekter, samt evt. endringer
    b) Godkjenning av vedtekter
-   c) Gjennomgang av årets aktiviteter, regnskap
+   c) Gjennomgang av Ã¥rets aktiviteter, regnskap
 
 4. Valg
    a) Formann
    b) Styre og varamedlemmer
-   c) Valgkomité
+   c) ValgkomitÃ©
 
 5. Eventuelt
 
 6. Avslutning ved nyvalgt leder
 </pre>
 
-<p><a href="/vedtekter.shtml" title="Oslo.pm sine foreslåtte vedtekter">Utkast til vedtekter</a>.</p>
+<p><a href="/vedtekter.shtml" title="Oslo.pm sine foreslÃ¥tte vedtekter">Utkast til vedtekter</a>.</p>
 
