--- a/_posts/2006-12-06-sosialt.md
+++ b/_posts/2006-12-06-sosialt.md
@@ -2,13 +2,13 @@
 layout: post
 title: Desember-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 6. desember 2006,
-klokken 18:00</strong>. Vi satser på en hyggelig stund på
-<strong><a href="http://kart.gulesider.no/kart/map.c?id=c_Z001ZOCI" title="Link til karttjeneste">Beer Palace</a>, Holmens g. 3</strong> på Aker Brygge.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 6. desember 2006,
+klokken 18:00</strong>. Vi satser pÃ¥ en hyggelig stund pÃ¥
+<strong><a href="http://kart.gulesider.no/kart/map.c?id=c_Z001ZOCI" title="Link til karttjeneste">Beer Palace</a>, Holmens g. 3</strong> pÃ¥ Aker Brygge.</p>
 
 <p>
-Det blir ikke noe faglig program - men vi kommer til å diskutere hva vi
-skal gjøre i Oslo.pm i 2007, i tillegg til å fordele verv blandt
-de som er i styret. Utover dette satser vi på å ha det trivelig,
+Det blir ikke noe faglig program - men vi kommer til Ã¥ diskutere hva vi
+skal gjÃ¸re i Oslo.pm i 2007, i tillegg til Ã¥ fordele verv blandt
+de som er i styret. Utover dette satser vi pÃ¥ Ã¥ ha det trivelig,
 og prater om hva enn vi finner interessant.
 </p>
