--- a/_posts/2007-05-02-double-p6.md
+++ b/_posts/2007-05-02-double-p6.md
@@ -2,12 +2,12 @@
 layout: post
 title: Faglig-sosialt medlemsm&oslash;te om Perl 6!
 ---
-<p>Oslo.pm arrangerer trippel gjesteforedrag! Denne gangen har vi lånt to
-foredragsholdere fra årets <a href="http://conferences.yapceurope.org/npw2007/">Nordic Perl Workshop i København</a>.</p>
+<p>Oslo.pm arrangerer trippel gjesteforedrag! Denne gangen har vi lÃ¥nt to
+foredragsholdere fra Ã¥rets <a href="http://conferences.yapceurope.org/npw2007/">Nordic Perl Workshop i KÃ¸benhavn</a>.</p>
 
 <pre>
    Tid:  <strong>Onsdag 2. mai 2007, klokken 18:00</strong>
-   Sted: <strong>Høyskolen i Oslo, avd. for Ingeniørutdanning
+   Sted: <strong>HÃ¸yskolen i Oslo, avd. for IngeniÃ¸rutdanning
          Cort Adelers gate 30, auditorium 1.701 (7. etg.)</strong> 
    Kart: <a href="http://www.kvasir.no/kart/index.c?id=a_168652" title="Link til kart">http://www.kvasir.no/kart/index.c?id=a_168652</a>
 
@@ -78,6 +78,6 @@ type of adventure game with text-based input and output.</p>
 
 
 <p>Foredragene vil totalt vare i 1,5-2 timer, og etter det faglige vil vi forflytte
- oss til et egnet utested i nærheten for å sosialisere. </p>
+ oss til et egnet utested i nÃ¦rheten for Ã¥ sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
