--- a/_posts/2007-11-29-genfors.md
+++ b/_posts/2007-11-29-genfors.md
@@ -2,17 +2,17 @@
 layout: post
 title: &Aring;rsm&oslash;tet 2007 for Oslo.pm
 ---
-<p>Oslo.pm har sitt årsmøte <strong>torsdag 19. november 2007, klokken
-18:30</strong>. Vi treffes på
+<p>Oslo.pm har sitt Ã¥rsmÃ¸te <strong>torsdag 19. november 2007, klokken
+18:30</strong>. Vi treffes pÃ¥
 <strong><a href="http://linpro.no/no/om_linpro/her_finner_du_oss" title="Link til karttjeneste">Linpro</a>, Vitaminveien 1A (Storo)</strong>.</p>
 
 <p>
-Agenda for møtet er:
+Agenda for mÃ¸tet er:
 </p>
 <ol>
-  <li>Åpning; valg av møteleder og referent.</li>
-  <li> Årsberetning.</li>
-  <li> Årsregnskap.</li>
+  <li>Ã…pning; valg av mÃ¸teleder og referent.</li>
+  <li> Ã…rsberetning.</li>
+  <li> Ã…rsregnskap.</li>
   <li> Valg av styre.</li>
   <li> Budsjett.</li>
   <li> Vedtektsendringer.</li>
