--- a/_posts/2008-07-02-sosialt.md
+++ b/_posts/2008-07-02-sosialt.md
@@ -2,9 +2,9 @@
 layout: post
 title: Juli-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 2. juli 2008, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.solsiden.no/kart.htm" title="Link til kart">Solsiden</a>, Søndre Akershus Kai 34</strong>. (Om det blir for mye regn flytter vi oss til <a href="http://dubliner.no/">The Dubliner Folk Pub</a>, Rådhusgaten 28.)</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 2. juli 2008, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.solsiden.no/kart.htm" title="Link til kart">Solsiden</a>, SÃ¸ndre Akershus Kai 34</strong>. (Om det blir for mye regn flytter vi oss til <a href="http://dubliner.no/">The Dubliner Folk Pub</a>, RÃ¥dhusgaten 28.)</p>
 
 <p>
-Tema er ikke fastsatt, så vi ser hva som skjer. En ting vi kan avgjøre er om Oslo.pm skal arrangere NPW neste år.</p>
+Tema er ikke fastsatt, sÃ¥ vi ser hva som skjer. En ting vi kan avgjÃ¸re er om Oslo.pm skal arrangere NPW neste Ã¥r.</p>
