--- a/_posts/2008-08-05-sosialt.md
+++ b/_posts/2008-08-05-sosialt.md
@@ -2,8 +2,8 @@
 layout: post
 title: August-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. august 2008, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysers gate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 5. august 2008, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysers gate 1</strong>.</p>
 
-<p>Tema er ikke fastsatt, så vi ser hva som skjer. Siste frist for innspill om Oslo.pm skal arrangere NPW neste år!</p>
+<p>Tema er ikke fastsatt, sÃ¥ vi ser hva som skjer. Siste frist for innspill om Oslo.pm skal arrangere NPW neste Ã¥r!</p>
