--- a/_posts/2009-04-01-sosialt.md
+++ b/_posts/2009-04-01-sosialt.md
@@ -2,10 +2,10 @@
 layout: post
 title: April-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 1. April 2008, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 1. April 2008, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for møtet blir forberedelsene for Nordic Perl Workshop - og alt annet vi finner interessant.
+Tema for mÃ¸tet blir forberedelsene for Nordic Perl Workshop - og alt annet vi finner interessant.
 </p>
