--- a/_posts/2009-05-06-git.md
+++ b/_posts/2009-05-06-git.md
@@ -2,10 +2,10 @@
 layout: post
 title: Mai-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har faglig medlemsmøte <strong>onsdag 6. mai 2008, klokken
-18:00</strong>. Vi treffes på 
-<strong><a href="http://met.no/Om_oss/?module=Articles;action=Article.publicShow;ID=435" title="Link til veibeskrivelse">Meteorologisk Institutt</a>, på Blindern</strong>. (Avlastningsbygget ved Forskningsparken T-bane stasjon.)</p>
+<p>Oslo.pm har faglig medlemsmÃ¸te <strong>onsdag 6. mai 2008, klokken
+18:00</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://met.no/Om_oss/?module=Articles;action=Article.publicShow;ID=435" title="Link til veibeskrivelse">Meteorologisk Institutt</a>, pÃ¥ Blindern</strong>. (Avlastningsbygget ved Forskningsparken T-bane stasjon.)</p>
 
-<p>Tema for møtet blir Marcus Ramberg sitt foredrag fra Go Open 2009, <strong>G(et)it Nå!</strong>.</p>
-<p><em>Versjonskontroll er et fundamentalt behov for å kunne drive strukturert og kontrollert utvikling. Foredraget tar for seg versjonskontroll-systemet Git, et system Linus Torvalds laget til utviklingen av Linux-kjernen. Vi ser på hvordan det skiller seg fra sentraliserte systemer som CVS, SVN og Perforce, og hvilke fordeler Git kan gi ditt utviklingsmiljø. Vi kommer også til å vise hvordan Git er bygget opp, og hvordan det fungerer under panseret. </em>
+<p>Tema for mÃ¸tet blir Marcus Ramberg sitt foredrag fra Go Open 2009, <strong>G(et)it NÃ¥!</strong>.</p>
+<p><em>Versjonskontroll er et fundamentalt behov for Ã¥ kunne drive strukturert og kontrollert utvikling. Foredraget tar for seg versjonskontroll-systemet Git, et system Linus Torvalds laget til utviklingen av Linux-kjernen. Vi ser pÃ¥ hvordan det skiller seg fra sentraliserte systemer som CVS, SVN og Perforce, og hvilke fordeler Git kan gi ditt utviklingsmiljÃ¸. Vi kommer ogsÃ¥ til Ã¥ vise hvordan Git er bygget opp, og hvordan det fungerer under panseret. </em>
 </p>
