--- a/_posts/2009-11-04-sosialt.md
+++ b/_posts/2009-11-04-sosialt.md
@@ -2,10 +2,10 @@
 layout: post
 title: November-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 4. November 2009, klokken
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 4. November 2009, klokken
 18:30</strong>. Vi treffes hos
-<strong><a href="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=m%C3%B8lleparken+21,oslo,+norge&amp;sll=55.791631,12.268724&amp;sspn=0.006852,0.01929&amp;ie=UTF8&amp;t=h&amp;hq=&amp;hnear=M%C3%B8lleparken,+Oslo,+Norway&amp;ll=59.928549,10.756774&amp;spn=0.005365,0.01929&amp;z=16" title="Link til karttjeneste">ABC Startsiden</a>, Sagveien 21A, i Mølleparken</strong>. Ring Andreas Marienborg (+47 982 93 610) om du ikke finner frem.</p>
+<strong><a href="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=m%C3%B8lleparken+21,oslo,+norge&amp;sll=55.791631,12.268724&amp;sspn=0.006852,0.01929&amp;ie=UTF8&amp;t=h&amp;hq=&amp;hnear=M%C3%B8lleparken,+Oslo,+Norway&amp;ll=59.928549,10.756774&amp;spn=0.005365,0.01929&amp;z=16" title="Link til karttjeneste">ABC Startsiden</a>, Sagveien 21A, i MÃ¸lleparken</strong>. Ring Andreas Marienborg (+47 982 93 610) om du ikke finner frem.</p>
 
 <p>
-Tema: Vi har erfaringsutveksling rundt web-rammeverk! Marcus Ramberg (fra Catalyst-prosjektet) gir en kort innleding og sammenligning, og så er ordet fritt. Etter møtet drar vi ut og sosialiserer.
+Tema: Vi har erfaringsutveksling rundt web-rammeverk! Marcus Ramberg (fra Catalyst-prosjektet) gir en kort innleding og sammenligning, og sÃ¥ er ordet fritt. Etter mÃ¸tet drar vi ut og sosialiserer.
 </p>
