--- a/_posts/2012-12-05-juleol.md
+++ b/_posts/2012-12-05-juleol.md
@@ -2,7 +2,7 @@
 layout: post
 title: Desember-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>Onsdag 5. desember 2012, klokken 18:30</strong>. Vi treffes på 
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>Onsdag 5. desember 2012, klokken 18:30</strong>. Vi treffes pÃ¥ 
 <strong><a href="https://www.facebook.com/Schouskjelleren" title="Link til facebook-siden">Schouskjelleren</a>, Trondheimsveien 2</strong>.</p>
 
 <p>
