--- a/_posts/2002-11-06-perl+sdl.md
+++ b/_posts/2002-11-06-perl+sdl.md
@@ -8,25 +8,25 @@ title: Oslo.pm inviterer til medlemsm&oslash;te om Perl og SDL!
 </pre>
 
 <p>&quot;Alle&quot; vet at Perl egner seg til tekstprosessering, databasetilgang, og
-lignende, men et felt som de færreste forbinder med Perl er grafiske
+lignende, men et felt som de fÃ¦rreste forbinder med Perl er grafiske
 spill. Etter at David J. Goehrig m.fl. lagde <a href="http://sdlperl.org/">Perl-bindinger til
-SDL-biblioteket</a>, kan dette være i ferd med å endre seg noe. SDL, Simple
+SDL-biblioteket</a>, kan dette vÃ¦re i ferd med Ã¥ endre seg noe. SDL, Simple
 DirectMedia Layer, er et kryssplattform multimediabibliotek skrevet i C
 som gir tilgang til skjerm, lyd og joystick. Perl og SDL brukes bl.a i
-spillet <a href="http://www.frozen-bubble.org/">frozen-bubble</a>. Foredraget gir en kort innføring i Perl sine
-SDL-bindinger, bl.a ved å demonstrere et fungerende eksempel.</p>
+spillet <a href="http://www.frozen-bubble.org/">frozen-bubble</a>. Foredraget gir en kort innfÃ¸ring i Perl sine
+SDL-bindinger, bl.a ved Ã¥ demonstrere et fungerende eksempel.</p>
 
-<p>Foredragsholder vil være Dag Asheim. Dag stiftet Linux-firmaet Linpro AS
+<p>Foredragsholder vil vÃ¦re Dag Asheim. Dag stiftet Linux-firmaet Linpro AS
 i 1995 og er idag daglig leder der. Dag har holdt flere Perlkurs, blant
 annet for NUUG (Norwegian Unix Users Group).  Han har hatt Perl som sitt
-favorittspråk siden tidlig på 90-tallet.</p>
+favorittsprÃ¥k siden tidlig pÃ¥ 90-tallet.</p>
 
-<p>Etter det faglige vil vi forflytte oss til et av utestedene på
-Grünerløkka for å sosialisere. :)</p>
+<p>Etter det faglige vil vi forflytte oss til et av utestedene pÃ¥
+GrÃ¼nerlÃ¸kka for Ã¥ sosialisere. :)</p>
 
 
-<p>Oslo.pm sine arrangementer er åpne for alle perl-interesserte! For å
-melde deg inn i Oslo Perl Mongers, trenger du bare å abonnere på
-<a href="http://mail.pm.org/mailman/listinfo/oslo">annonserings-listen</a> vår. Se ellers våre websider for mere info!</p>
+<p>Oslo.pm sine arrangementer er Ã¥pne for alle perl-interesserte! For Ã¥
+melde deg inn i Oslo Perl Mongers, trenger du bare Ã¥ abonnere pÃ¥
+<a href="http://mail.pm.org/mailman/listinfo/oslo">annonserings-listen</a> vÃ¥r. Se ellers vÃ¥re websider for mere info!</p>
 
 <p>Velkommen til alle! :)</p>
