--- a/_posts/2003-01-08-perl+asp.md
+++ b/_posts/2003-01-08-perl+asp.md
@@ -8,24 +8,24 @@ title: Oslo.pm inviterer til medlemsm&oslash;te om Perl og ASP!
 </pre>
 
 
-<p>Januarmøtet handler om <a href="http://www.apache-asp.org/">Active Server
+<p>JanuarmÃ¸tet handler om <a href="http://www.apache-asp.org/">Active Server
 Pages-programmering med Perl</a>. Det er ikke mange som bruker kombinasjonen
-og det finnes sparsomt med info på nettet. Foredragsholder Bjørn Furuknap
-har opplevd at Perl+ASP er langt mer behagelig å jobbe med enn VB+ASP.</p>
+og det finnes sparsomt med info pÃ¥ nettet. Foredragsholder BjÃ¸rn Furuknap
+har opplevd at Perl+ASP er langt mer behagelig Ã¥ jobbe med enn VB+ASP.</p>
 
-<p>Bjørn vil fortelle som sine erfaringer med hvordan Perl fungerer med ASP
-samt gi en liten innføring i ASP. Kombinasjonen er ganske gøy, og særdeles 
-nyttig hvis valg av servermiljø er begrenset!</p>
+<p>BjÃ¸rn vil fortelle som sine erfaringer med hvordan Perl fungerer med ASP
+samt gi en liten innfÃ¸ring i ASP. Kombinasjonen er ganske gÃ¸y, og sÃ¦rdeles 
+nyttig hvis valg av servermiljÃ¸ er begrenset!</p>
 
-<p>Bjørn Furuknap er daglig leder i <a href="http://www.infonett.hm.no/publ/Hovedside/index.stm">LIT AS</a> og
+<p>BjÃ¸rn Furuknap er daglig leder i <a href="http://www.infonett.hm.no/publ/Hovedside/index.stm">LIT AS</a> og
 jobber med utvikling av programvare samt teknisk drift av nettstedet og
-servere. Bjørn har 20 års programmeringserfaring, har vært Perl-utvikler
-i 6 år og jobbet med perl/ASP i 3 år. Han var med og startet Infonett A/S,
-og har erfaringer med å lage alt fra nettløsninger til butikkdatasystemer
-basert på Perl.</p>
+servere. BjÃ¸rn har 20 Ã¥rs programmeringserfaring, har vÃ¦rt Perl-utvikler
+i 6 Ã¥r og jobbet med perl/ASP i 3 Ã¥r. Han var med og startet Infonett A/S,
+og har erfaringer med Ã¥ lage alt fra nettlÃ¸sninger til butikkdatasystemer
+basert pÃ¥ Perl.</p>
 
-<p>Foredraget vil vare i maks 1½ time inkludert en kort pause, og vil
-bevege seg inn på følgende tema:</p><p>
+<p>Foredraget vil vare i maks 1Â½ time inkludert en kort pause, og vil
+bevege seg inn pÃ¥ fÃ¸lgende tema:</p><p>
 
 </p><ul>
 <li>ASP 101, en kort intro</li>
@@ -37,21 +37,21 @@ bevege seg inn på følgende tema:</p><p>
 
 <ul>
 <li>Praktisk koding</li>
-<li>Eksempler på bruk</li>
+<li>Eksempler pÃ¥ bruk</li>
 <li>Forskjeller fra CGI</li>
 <li>Ytelse</li>
 <li>Erfaring fra utvikling</li>
 <li>Fallgruver, ulemper</li>
 </ul>
 
-<p>Etter det faglige vil vi forflytte oss til et av utestedene på
-Grünerløkka for å sosialisere. Første runde med drikke spanderes av
+<p>Etter det faglige vil vi forflytte oss til et av utestedene pÃ¥
+GrÃ¼nerlÃ¸kka for Ã¥ sosialisere. FÃ¸rste runde med drikke spanderes av
 LIT! :)</p>
 
-<p>Oslo.pm sine arrangementer er åpne for alle perl-interesserte! For å
-melde deg inn i Oslo Perl Mongers, trenger du bare å abonnere på
+<p>Oslo.pm sine arrangementer er Ã¥pne for alle perl-interesserte! For Ã¥
+melde deg inn i Oslo Perl Mongers, trenger du bare Ã¥ abonnere pÃ¥
 <a href="http://mail.pm.org/mailman/listinfo/oslo">annonserings-listen</a>
-vår. Se ellers <a href="http://oslo.pm.org/">Oslo.pm sine websider</a> for
+vÃ¥r. Se ellers <a href="http://oslo.pm.org/">Oslo.pm sine websider</a> for
 mere info!</p>
 
 <p>Velkommen til alle! :)</p>
