--- a/_posts/2004-11-03-sosialt.md
+++ b/_posts/2004-11-03-sosialt.md
@@ -2,7 +2,7 @@
 layout: post
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>3. november 2004, klokken
-18:00</strong>. Vi satser på en hyggelig stund på <strong>Pasitz,
-Tordenskioldsgate 10 v/Rådhuset</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>3. november 2004, klokken
+18:00</strong>. Vi satser pÃ¥ en hyggelig stund pÃ¥ <strong>Pasitz,
+Tordenskioldsgate 10 v/RÃ¥dhuset</strong>.</p>
 
