--- a/_posts/2004-12-02-maypole.md
+++ b/_posts/2004-12-02-maypole.md
@@ -3,30 +3,30 @@ layout: post
 title: Faglig-sosialt medlemsm&oslash;te om Maypole!
 ---
 <p>Oslo.pm arrangerer en introduksjon til <a href="http://maypole.perl.org/" title="Maypole websiden">Maypole</a>, et nytt <abbr title="Model-View-Controller">MVC</abbr>-basert rammeverk for webutvikling
- i Perl. Få en demonstrasjon på hvordan man lager en komplett
- web-applikasjon på mindre enn 30 kodelinjer! Vi kommer også til
- å lage en enkel weblogg i løpet av foredraget.</p>
+ i Perl. FÃ¥ en demonstrasjon pÃ¥ hvordan man lager en komplett
+ web-applikasjon pÃ¥ mindre enn 30 kodelinjer! Vi kommer ogsÃ¥ til
+ Ã¥ lage en enkel weblogg i lÃ¸pet av foredraget.</p>
 
 <pre>
    Tid:  <strong>Torsdag 2. desember 2004, klokken 18:00</strong>
-   Sted: <strong>Mediaflex A/S sine lokaler, Mølleparken 2D</strong>
+   Sted: <strong>Mediaflex A/S sine lokaler, MÃ¸lleparken 2D</strong>
 
    Merk tid og sted!
 </pre>
 
 <p>Lokalet er rett &quot;bak&quot; bygget til Linpro, Opera, Trolltech og Runbox.
- Ankomst fra Waldemar Thranes gate - ned trappen ved Sannerbrua, så opp
- og til venstre. Inngangen ligger da på hjørnet av bygget på
- høyre hånd. Se <a href="http://www.gulesider.no/gsi/map.do?x=10.756205&amp;y=59.929848&amp;id=a_10.756205_59.929848_M%F8lleparken+2D%2C+0459+OSLO%2C+Oslo" title="Link til kart på gulesider.no">Kart til Mølleparken 2D</a> (<a href="http://search.kvasir.no/query?what=map&amp;streetname=M%F8lleparken&amp;streetnumber=2D&amp;mapstate=6%3B10.7548%3B59.9288%3B0%3B0.0000%3B0.0000%3B0.0000%3B0.0000%3B&amp;mapcomp=%3B%3B%3BM%D8LLEPARKEN%3B2%3B%3B0459%3BOSLO%3B%3B%3B%3B%3B10.754812553273%3B59.9288242808635%3B0%3B0" title="Link til kart på kvasir.no">Alternativt kart</a>.)
+ Ankomst fra Waldemar Thranes gate - ned trappen ved Sannerbrua, sÃ¥ opp
+ og til venstre. Inngangen ligger da pÃ¥ hjÃ¸rnet av bygget pÃ¥
+ hÃ¸yre hÃ¥nd. Se <a href="http://www.gulesider.no/gsi/map.do?x=10.756205&amp;y=59.929848&amp;id=a_10.756205_59.929848_M%F8lleparken+2D%2C+0459+OSLO%2C+Oslo" title="Link til kart pÃ¥ gulesider.no">Kart til MÃ¸lleparken 2D</a> (<a href="http://search.kvasir.no/query?what=map&amp;streetname=M%F8lleparken&amp;streetnumber=2D&amp;mapstate=6%3B10.7548%3B59.9288%3B0%3B0.0000%3B0.0000%3B0.0000%3B0.0000%3B&amp;mapcomp=%3B%3B%3BM%D8LLEPARKEN%3B2%3B%3B0459%3BOSLO%3B%3B%3B%3B%3B10.754812553273%3B59.9288242808635%3B0%3B0" title="Link til kart pÃ¥ kvasir.no">Alternativt kart</a>.)
 </p>
 
 <p>Foredragsholder er Marcus Ramberg, aktiv deltager i Maypole-prosjektet.
  Marcus jobber for tiden som utviklingsleder i <a href="http://www.mediaflex.no/" title="Hjemmesiden til Mediaflex A/S">Mediaflex</a>, et lite selskap som
- leverer <em>Pageflex</em>-baserte Web2Print løsninger, utviklet i
+ leverer <em>Pageflex</em>-baserte Web2Print lÃ¸sninger, utviklet i
  Perl.</p>
 
 <p>Foredraget vil vare i 1-2 timer, og etter det faglige vil vi forflytte
- oss til et av utestedene på Grünerløkka for å
+ oss til et av utestedene pÃ¥ GrÃ¼nerlÃ¸kka for Ã¥
  sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
