--- a/_posts/2005-02-02-sosialt.md
+++ b/_posts/2005-02-02-sosialt.md
@@ -2,7 +2,7 @@
 layout: post
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>2. februar 2005, klokken
-18:00</strong>. Vi satser på en hyggelig stund på
-<strong>[UBESTEMT], [STED] v/[OMRÅDE]</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>2. februar 2005, klokken
+18:00</strong>. Vi satser pÃ¥ en hyggelig stund pÃ¥
+<strong>[UBESTEMT], [STED] v/[OMRÃ…DE]</strong>.</p>
 
