--- a/_posts/2005-04-06-catalyst.md
+++ b/_posts/2005-04-06-catalyst.md
@@ -2,12 +2,12 @@
 layout: post
 title: Faglig-sosialt medlemsm&oslash;te om Catalyst!
 ---
-<p>Oslo.pm arrangerer en introduksjon til <a href="http://search.cpan.org/dist/Catalyst/" title="Catalyst på CPAN">Catalyst</a>, et nytt <abbr title="Model-View-Controller">MVC</abbr> rammeverk som henter mye
+<p>Oslo.pm arrangerer en introduksjon til <a href="http://search.cpan.org/dist/Catalyst/" title="Catalyst pÃ¥ CPAN">Catalyst</a>, et nytt <abbr title="Model-View-Controller">MVC</abbr> rammeverk som henter mye
  inspirasjon fra Ruby on Rails og Maypole.</p>
 
 <p>
- I løpet av presentasjonen skal vi lage en enkel Wiki og vise
- hvordan Catalyst på en enkel måte muliggjør bruk
+ I lÃ¸pet av presentasjonen skal vi lage en enkel Wiki og vise
+ hvordan Catalyst pÃ¥ en enkel mÃ¥te muliggjÃ¸r bruk
  av <a href="http://www.adaptivepath.com/publications/essays/archives/000385.php">AJAX
  brukergrensesnitt</a> - kjent fra tjenester som gmail, google suggest
  og google maps. </p>
@@ -22,11 +22,11 @@ title: Faglig-sosialt medlemsm&oslash;te om Catalyst!
 
 <p>Foredragsholder er Marcus Ramberg, aktiv deltager i Catalyst-prosjektet.
  Marcus jobber for tiden som utviklingsleder i <a href="http://www.mediaflex.no/" title="Hjemmesiden til Mediaflex A/S">Mediaflex</a>, et lite selskap som
- leverer <em>Pageflex</em>-baserte Web2Print løsninger, utviklet i
+ leverer <em>Pageflex</em>-baserte Web2Print lÃ¸sninger, utviklet i
  Perl.</p>
 
 <p>Foredraget vil vare i 1-2 timer, og etter det faglige vil vi forflytte
- oss til et av utestedene på Grünerløkka for å
+ oss til et av utestedene pÃ¥ GrÃ¼nerlÃ¸kka for Ã¥
  sosialisere. </p>
 
 <!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
