--- a/_posts/2005-09-07-sosialt.md
+++ b/_posts/2005-09-07-sosialt.md
@@ -2,21 +2,21 @@
 layout: post
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 7. september 2005, klokken
-18:00</strong>. Vi satser på en hyggelig stund på
-<strong>The Dubliner, Rådhusgata 28</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 7. september 2005, klokken
+18:00</strong>. Vi satser pÃ¥ en hyggelig stund pÃ¥
+<strong>The Dubliner, RÃ¥dhusgata 28</strong>.</p>
 
 <p>
-Vi satser på å ha en hyggelig stund, med lett prat om ting som
-interesserer oss. Er du tørst, eller har du noe på hjertet, så møt
+Vi satser pÃ¥ Ã¥ ha en hyggelig stund, med lett prat om ting som
+interesserer oss. Er du tÃ¸rst, eller har du noe pÃ¥ hjertet, sÃ¥ mÃ¸t
 opp! Potensielle tema for kvelden er Lars sitt Log4Perl-foredrag neste
-uke, hva som skal skje på oktobermøtet og Rune sine tanker om Perl6 i
+uke, hva som skal skje pÃ¥ oktobermÃ¸tet og Rune sine tanker om Perl6 i
 november.
 </p>
 
 <p>
-Dessuten tenker vi på å arrangere Nordic Perl Workshop neste år, og om
-du er interessert i å delta i arrangeringa (eller med sponsing) så møt
+Dessuten tenker vi pÃ¥ Ã¥ arrangere Nordic Perl Workshop neste Ã¥r, og om
+du er interessert i Ã¥ delta i arrangeringa (eller med sponsing) sÃ¥ mÃ¸t
 gjerne opp! :)
 </p>
 
