--- a/_posts/2005-09-14-log4perl.md
+++ b/_posts/2005-09-14-log4perl.md
@@ -2,19 +2,19 @@
 layout: post
 title: Faglig-sosialt medlemsm&oslash;te om Log4Perl!
 ---
-<p>Oslo.pm arrangerer en introduksjon til <a href="http://search.cpan.org/~mschilli/Log-Log4perl-1.00/" title="Log4Perl på CPAN">Log4perl</a>, som er et loggesystem
-direkte basert på log4j -- det mest brukte systemet for logging i
-Java-verdenen. I tillegg til å ha blitt portet til Perl i form av
-Log4perl, finnes det også ports av log4j for Python, Ruby, Eiffel,
+<p>Oslo.pm arrangerer en introduksjon til <a href="http://search.cpan.org/~mschilli/Log-Log4perl-1.00/" title="Log4Perl pÃ¥ CPAN">Log4perl</a>, som er et loggesystem
+direkte basert pÃ¥ log4j -- det mest brukte systemet for logging i
+Java-verdenen. I tillegg til Ã¥ ha blitt portet til Perl i form av
+Log4perl, finnes det ogsÃ¥ ports av log4j for Python, Ruby, Eiffel,
 C, C++ og C#.
 </p>
 
 <p>
-Noen av nøkkeltrekkene til Log4perl er muligheten til å dele opp
+Noen av nÃ¸kkeltrekkene til Log4perl er muligheten til Ã¥ dele opp
 loggingen i et hierarkisk kategorisystem (med arv), samt muligheten
-til å styre hva som skal logges, hvor ting skal logges (fil, database,
-e-post), og på hvilke formater det skal logges, kun ved å redigere i
-en konfigurasjonsfil, slik at man unngår endringer i kildekoden.
+til Ã¥ styre hva som skal logges, hvor ting skal logges (fil, database,
+e-post), og pÃ¥ hvilke formater det skal logges, kun ved Ã¥ redigere i
+en konfigurasjonsfil, slik at man unngÃ¥r endringer i kildekoden.
 </p>
 
 <pre>
@@ -25,6 +25,6 @@ en konfigurasjonsfil, slik at man unngår endringer i kildekoden.
 
 <p>Introduksjonen holdes av Lars Haugseth, som for tiden jobber som
 senior systemutvikler i <a href="http://www.tinde.no/" title="Hjemmesiden til Tinde">Tinde ASA</a>, der hans oppgaver
-bl.a. består av 
-utvikling på et 100% Perl-basert rammeverk for annonseportaler.
+bl.a. bestÃ¥r av 
+utvikling pÃ¥ et 100% Perl-basert rammeverk for annonseportaler.
 </p>
