--- a/_posts/2006-04-04-sosialt.md
+++ b/_posts/2006-04-04-sosialt.md
@@ -2,13 +2,13 @@
 layout: post
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 1. mars 2006, klokken
-18:00</strong>. Vi satser på en hyggelig stund på
-<strong>The Dubliner, Rådhusgata 28</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 1. mars 2006, klokken
+18:00</strong>. Vi satser pÃ¥ en hyggelig stund pÃ¥
+<strong>The Dubliner, RÃ¥dhusgata 28</strong>.</p>
 
 <p>
-Vi sikter inn på en hyggelig stund med lett prat om ting som
-interesserer oss. Er du tørst, eller har du noe på hjertet,
-så møt opp! Potensielle tema for kvelden er vårens
+Vi sikter inn pÃ¥ en hyggelig stund med lett prat om ting som
+interesserer oss. Er du tÃ¸rst, eller har du noe pÃ¥ hjertet,
+sÃ¥ mÃ¸t opp! Potensielle tema for kvelden er vÃ¥rens
 program og forberedelsene til Nordic Perl Workshop til sommeren. 
 </p>
