--- a/_posts/2006-08-02-sosialt.md
+++ b/_posts/2006-08-02-sosialt.md
@@ -2,9 +2,9 @@
 layout: post
 title: Juli-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. juli 2006, klokken
-18:00</strong>. Vi satser på en hyggelig stund på
-<strong><a href="http://kart.gulesider.no/?id=c_Z0HC1GWR" title="Link til karttjeneste">Solsiden</a>, Søndre Akershus Kai 34</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 5. juli 2006, klokken
+18:00</strong>. Vi satser pÃ¥ en hyggelig stund pÃ¥
+<strong><a href="http://kart.gulesider.no/?id=c_Z0HC1GWR" title="Link til karttjeneste">Solsiden</a>, SÃ¸ndre Akershus Kai 34</strong>.</p>
 
 <p>
 Det blir ikke noe faglig program - i stedet sitter vi i solen og hygger oss med kald drikke og prat om
