--- a/_posts/2007-11-07-sosialt.md
+++ b/_posts/2007-11-07-sosialt.md
@@ -2,13 +2,13 @@
 layout: post
 title: November-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 7. november 2007, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 7. november 2007, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for møtet vil (bortsett fra det rent hyggelige og
-sosiale) være å planlegge årsmøtet i
-Oslo.pm og kanskje litt om vårens aktiviteter. Er det noen
-som har brukt Moose i Oslo.pm? Møt opp om du har! :)
+Tema for mÃ¸tet vil (bortsett fra det rent hyggelige og
+sosiale) vÃ¦re Ã¥ planlegge Ã¥rsmÃ¸tet i
+Oslo.pm og kanskje litt om vÃ¥rens aktiviteter. Er det noen
+som har brukt Moose i Oslo.pm? MÃ¸t opp om du har! :)
 </p>
