--- a/_posts/2007-12-05-sosialt.md
+++ b/_posts/2007-12-05-sosialt.md
@@ -2,12 +2,12 @@
 layout: post
 title: Desember-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. desember 2007, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 5. desember 2007, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for møtet vil (bortsett fra det rent hyggelige og
-sosiale) være planlegging av aktiviteter i 2008, kanskje inkludert
+Tema for mÃ¸tet vil (bortsett fra det rent hyggelige og
+sosiale) vÃ¦re planlegging av aktiviteter i 2008, kanskje inkludert
 en Perl Quiz kveld? Bli med! :)
 </p>
