--- a/_posts/2008-01-02-sosialt.md
+++ b/_posts/2008-01-02-sosialt.md
@@ -2,13 +2,13 @@
 layout: post
 title: Desember-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 2. januar 2008, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 2. januar 2008, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for møtet blir <a href="http://friprog.no/">friprog.no</a>
-sin konferanse i April, Microsoft sitt utspill om å gjøre
+Tema for mÃ¸tet blir <a href="http://friprog.no/">friprog.no</a>
+sin konferanse i April, Microsoft sitt utspill om Ã¥ gjÃ¸re
 &quot;<a href="http://digi.no/php/art.php?id=501168">Windows til plattform
-for norsk åpen kildekode</a>&quot; - og alt annet vi finner interessant.
+for norsk Ã¥pen kildekode</a>&quot; - og alt annet vi finner interessant.
 </p>
