--- a/_posts/2008-03-05-sosialt.md
+++ b/_posts/2008-03-05-sosialt.md
@@ -2,11 +2,11 @@
 layout: post
 title: Mars-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 5. mars 2008, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 5. mars 2008, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysersgate 1</strong>.</p>
 
 <p>
-Tema for møtet blir forberedelsene for Oslo QA Hackathon, testing
+Tema for mÃ¸tet blir forberedelsene for Oslo QA Hackathon, testing
 med Perl - og alt annet vi finner interessant.
 </p>
