--- a/_posts/2008-09-03-sosialt.md
+++ b/_posts/2008-09-03-sosialt.md
@@ -2,8 +2,8 @@
 layout: post
 title: September-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 3. september 2008,
-klokken 18:30</strong>. Vi treffes på 
-<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba Café</a>, Keysers gate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 3. september 2008,
+klokken 18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://www.nattguiden.no/utested/1052" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysers gate 1</strong>.</p>
 
 <p>Denne gangen har Karl Rune Nilsen (<a href="http://linpro.no/">Linpro</a>) lovet oss en introduksjon til hvordan lage tester i <a href="http://rakudo.org/">Rakudo Perl</a> (Parrot-implementasjonen av Perl 6.)</p>
