--- a/_posts/2008-11-28-genfors.md
+++ b/_posts/2008-11-28-genfors.md
@@ -2,24 +2,24 @@
 layout: post
 title: &Aring;rsm&oslash;tet 2008 for Oslo.pm
 ---
-<p>Oslo.pm har sitt årsmøte <strong>torsdag 28. november 2008, klokken
-18:30</strong>. Vi treffes på
-<strong><a href="http://www.foyen.no/" title="Link firmasider">FØYEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>.</p>
+<p>Oslo.pm har sitt Ã¥rsmÃ¸te <strong>torsdag 28. november 2008, klokken
+18:30</strong>. Vi treffes pÃ¥
+<strong><a href="http://www.foyen.no/" title="Link firmasider">FÃ˜YEN Advokatfirma DA</a>, C J Hambros plass 2 (<a href="http://www.gulesider.no/kart/#id%3Dc_Z0HB23O3%26lon%3D597354.977088%26lat%3D6643333.560761%26zoom%3D15%26layers%3DB0000%26tab%3Dyellow" title="Link til karttjeneste">v/Tinghuset</a>)</strong>.</p>
 
-<p>Oppmøte ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppmøtte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p>
+<p>OppmÃ¸te ved Tinghuset kl. 18:25, Kirill kommer ned og henter de oppmÃ¸tte kl. 18:30; ring 928 83 974 hvis du kommer for sent.</p>
 
 <p>
-Agenda for møtet er:
+Agenda for mÃ¸tet er:
 </p>
 <ol>
-  <li> Åpning; valg av møteleder og referent.</li>
-  <li> Valg av to medlemmer til å undertegne protokollen.</li>
-  <li> Årsberetning.</li>
-  <li> Årsregnskap.</li>
+  <li> Ã…pning; valg av mÃ¸teleder og referent.</li>
+  <li> Valg av to medlemmer til Ã¥ undertegne protokollen.</li>
+  <li> Ã…rsberetning.</li>
+  <li> Ã…rsregnskap.</li>
   <li> Valg av styre og andre tillitsmenn.</li>
   <li> Budsjett.</li>
   <!-- li> Vedtektsendringer.</li -->
   <li> Eventuelt.</li>
 </ol>
 
-<p>Årsberetning, årsregnskap og valgkomitéens innstilling ettersendes. Det foreligger ingen forslag til vedtektsendringer eller andre innkomne saker til behandling på årsmøtet.</p>
+<p>Ã…rsberetning, Ã¥rsregnskap og valgkomitÃ©ens innstilling ettersendes. Det foreligger ingen forslag til vedtektsendringer eller andre innkomne saker til behandling pÃ¥ Ã¥rsmÃ¸tet.</p>
