--- a/_posts/2009-06-03-sosialt.md
+++ b/_posts/2009-06-03-sosialt.md
@@ -2,9 +2,9 @@
 layout: post
 title: Juni-medlemsm&oslash;tet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>onsdag 3. Juni 2008, klokken
-18:30</strong>. Vi treffes på 
-<strong><a href="http://vibb.no/Company.asp?CompanyID=8438" title="Link til karttjeneste">Marhaba Café</a>, Keysersgate 1</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmÃ¸te <strong>onsdag 3. Juni 2008, klokken
+18:30</strong>. Vi treffes pÃ¥ 
+<strong><a href="http://vibb.no/Company.asp?CompanyID=8438" title="Link til karttjeneste">Marhaba CafÃ©</a>, Keysersgate 1</strong>.</p>
 
 <p>
 Tema: Sosialiteter og nettverkspils og alt annet som er interessant.
