Fix markdown syntax errors

--- a/_posts/2003-01-08-perl+asp.md
+++ b/_posts/2003-01-08-perl+asp.md
@@ -7,27 +7,15 @@ title: Oslo.pm inviterer til medlemsm&oslash;te om Perl og ASP!
    Onsdag 8. januar 2003, klokken 18:00</strong>
 </pre>
 
+<p>Januarmøtet handler om <a href="http://www.apache-asp.org/">Active Server Pages-programmering med Perl</a>. Det er ikke mange som bruker kombinasjonen og det finnes sparsomt med info på nettet. Foredragsholder Bjørn Furuknap har opplevd at Perl+ASP er langt mer behagelig å jobbe med enn VB+ASP.</p>
 
-<p>Januarmøtet handler om <a href="http://www.apache-asp.org/">Active Server
-Pages-programmering med Perl</a>. Det er ikke mange som bruker kombinasjonen
-og det finnes sparsomt med info på nettet. Foredragsholder Bjørn Furuknap
-har opplevd at Perl+ASP er langt mer behagelig å jobbe med enn VB+ASP.</p>
+<p>Bjørn vil fortelle som sine erfaringer med hvordan Perl fungerer med ASP samt gi en liten innføring i ASP. Kombinasjonen er ganske gøy, og særdeles nyttig hvis valg av servermiljø er begrenset!</p>
 
-<p>Bjørn vil fortelle som sine erfaringer med hvordan Perl fungerer med ASP
-samt gi en liten innføring i ASP. Kombinasjonen er ganske gøy, og særdeles 
-nyttig hvis valg av servermiljø er begrenset!</p>
+<p>Bjørn Furuknap er daglig leder i <a href="http://www.infonett.hm.no/publ/Hovedside/index.stm">LIT AS</a> og jobber med utvikling av programvare samt teknisk drift av nettstedet og servere. Bjørn har 20 års programmeringserfaring, har vært Perl-utvikler i 6 år og jobbet med perl/ASP i 3 år. Han var med og startet Infonett A/S, og har erfaringer med å lage alt fra nettløsninger til butikkdatasystemer basert på Perl.</p>
 
-<p>Bjørn Furuknap er daglig leder i <a href="http://www.infonett.hm.no/publ/Hovedside/index.stm">LIT AS</a> og
-jobber med utvikling av programvare samt teknisk drift av nettstedet og
-servere. Bjørn har 20 års programmeringserfaring, har vært Perl-utvikler
-i 6 år og jobbet med perl/ASP i 3 år. Han var med og startet Infonett A/S,
-og har erfaringer med å lage alt fra nettløsninger til butikkdatasystemer
-basert på Perl.</p>
+<p>Foredraget vil vare i maks 1½ time inkludert en kort pause, og vil bevege seg inn på følgende tema:</p>
 
-<p>Foredraget vil vare i maks 1½ time inkludert en kort pause, og vil
-bevege seg inn på følgende tema:</p><p>
-
-</p><ul>
+<ul>
 <li>ASP 101, en kort intro</li>
 <li>Hvorfor ASP</li>
 <li>Hvorfor Perl og ASP</li>
