--- a/_posts/2007-05-02-double-p6.md
+++ b/_posts/2007-05-02-double-p6.md
@@ -20,64 +20,31 @@ foredragsholdere fra årets <a href="http://conferences.yapceurope.org/npw2007/"
 <p>This talk is about writing text adventures, or Interactive Fictions, in
 Perl6.</p>
 
-<p>Interactive fiction, often abbreviated IF, describes a computer game in
-which players use text commands to control characters and influence the
-environment. In common usage, the word refers to text adventures, a
-type of adventure game with text-based input and output.</p>
+<p>Interactive fiction, often abbreviated IF, describes a computer game in which players use text commands to control characters and influence the environment. In common usage, the word refers to text adventures, a type of adventure game with text-based input and output.</p>
 
 <p>The process of writing an IF in Perl6 is an adventure in itself.</p>
 
 <h4>Nelson Ferraz: &quot;Code Generation with Perl&quot;</h4>
 
-<p>Code Generation is the technique of writing programs that write or
-    manipulate other programs. In many cases, this allows programmers to
-    get more done in the same amount of time as they would take to write
-    all the code manually.  </p>
+<p>Code Generation is the technique of writing programs that write or manipulate other programs. In many cases, this allows programmers to get more done in the same amount of time as they would take to write all the code manually.  </p>
 
-<p>This presentation will show how Perl can be used to generate other
-    languages and Perl itself.</p>
+<p>This presentation will show how Perl can be used to generate other languages and Perl itself.</p>
 
-<p>We&#39;ll also be introduced to an XML-based application description
-    language, which allows a programmer to describe *what* he wants to
-    produce, not *how* to implement it.</p>
-
+<p>We&#39;ll also be introduced to an XML-based application description language, which allows a programmer to describe *what* he wants to produce, not *how* to implement it.</p>
 
 <h4>Jonathan Worthington: &quot;Playing with bird guts&quot;</h4>
 
-<p>Parrot is a virtual machine for dynamic languages. It is one
-   target for Perl 6 amongst a wide range of other languages. In this talk
-   I&#39;ll dive into how some bits of Parrot actually work. I&#39;ll include:</p>
-
-<ul><li>A high level overview of how you go from high level langauge to
-       actually running It</li>
+<p>Parrot is a virtual machine for dynamic languages. It is one target for Perl 6 amongst a wide range of other languages. In this talk I&#39;ll dive into how some bits of Parrot actually work. I&#39;ll include:</p>
+<ul><li>A high level overview of how you go from high level langauge to actually running It</li>
 <li>The interpreter data structure</li>
 <li>Opcode dispatch</li>
 <li>PMCs</li>
 <li>Calling conventions, including contexts and return continuations</li>
 <li>Garbage collection</li>
 </ul>
-
 <p>No knowledge of C, Parrot or virtual machines in general is required.</p>
-
 <h4>Om foredragsholderne:</h4>
-<p>Nelson Ferraz is Electronic Engineer, Master in Business Information
-    Systems, and has been working with Perl for almost 10 years. Co-founder
-    of the Brazilian Perl Society, nowadays he lives and works in Lisbon.</p>
-
-<p>Jonathan Worthington:
-</p><blockquote>&quot;After graduaing last summer, I&#39;ve been doing a
-    mix of consultancy, going to Perl events and traveling. I started
-    hacking on the Parrot VM in 2003, mostly working on improving Windows
-    support through a number of little patches. I&#39;m to blame for the Parrot
-    bytecode file linker and the .Net =&gt; Parrot bytecode translator, which
-    I worked on as my final year degree project. My more recent Parrot
-    exploits include working on changes to the bytecode file design and
-    leading the implementatin of the new object model, complete with
-    roles.&quot;</blockquote>
-
-
-
-<p>Foredragene vil totalt vare i 1,5-2 timer, og etter det faglige vil vi forflytte
- oss til et egnet utested i nærheten for å sosialisere. </p>
-
-<!-- EOF $Source: /home/groupleaders/oslo/.cvsroot/web_docs/arrangementer/2004-12-02-maypole.html,v $ -->
+<p>Nelson Ferraz is Electronic Engineer, Master in Business Information Systems, and has been working with Perl for almost 10 years. Co-founder of the Brazilian Perl Society, nowadays he lives and works in Lisbon.</p>
+<p>Jonathan Worthington:</p>
+<blockquote>&quot;After graduating last summer, I&#39;ve been doing a mix of consultancy, going to Perl events and traveling. I started hacking on the Parrot VM in 2003, mostly working on improving Windows support through a number of little patches. I&#39;m to blame for the Parrot bytecode file linker and the .Net =&gt; Parrot bytecode translator, which I worked on as my final year degree project. My more recent Parrot exploits include working on changes to the bytecode file design and leading the implementatin of the new object model, complete with roles.&quot;</blockquote>
+<p>Foredragene vil totalt vare i 1,5-2 timer, og etter det faglige vil vi forflytte oss til et egnet utested i nærheten for å sosialisere. </p>
