--- a/_posts/2007-11-29-genfors.md
+++ b/_posts/2007-11-29-genfors.md
@@ -1,14 +1,9 @@
 ---
 layout: post
-title: &Aring;rsm&oslash;tet 2007 for Oslo.pm
+title: Årsmøtet 2007 for Oslo.pm
 ---
-<p>Oslo.pm har sitt årsmøte <strong>torsdag 19. november 2007, klokken
-18:30</strong>. Vi treffes på
-<strong><a href="http://linpro.no/no/om_linpro/her_finner_du_oss" title="Link til karttjeneste">Linpro</a>, Vitaminveien 1A (Storo)</strong>.</p>
-
-<p>
-Agenda for møtet er:
-</p>
+<p>Oslo.pm har sitt årsmøte <strong>torsdag 19. november 2007, klokken 18:30</strong>. Vi treffes på <strong><a href="http://linpro.no/no/om_linpro/her_finner_du_oss" title="Link til karttjeneste">Linpro</a>, Vitaminveien 1A (Storo)</strong>.</p>
+<p> Agenda for møtet er: </p>
 <ol>
   <li>Åpning; valg av møteleder og referent.</li>
   <li> Årsberetning.</li>
