Fix incorrect year; Remove unnecesary HTML entities

--- a/_posts/2013-01-02-fagol.md
+++ b/_posts/2013-01-02-fagol.md
@@ -1,10 +1,7 @@
 ---
 layout: post
-title: Januar-medlemsm&oslash;tet i Oslo.pm
+title: Januar-medlemsmøtet i Oslo.pm
 ---
-<p>Oslo.pm har sosialt medlemsmøte <strong>Onsdag 2. januar 2012, klokken 18:30</strong>. Vi treffes på 
-<strong><a href="http://www.yelp.com/biz/crowbar-og-bryggeri-oslo" title="Link til facebook-siden">Crowbar &amp; Bryggeri</a>, Torggata 32</strong>.</p>
+<p>Oslo.pm har sosialt medlemsmøte <strong>Onsdag 2. januar 2013, klokken 18:30</strong>. Vi treffes på <strong><a href="http://www.yelp.com/biz/crowbar-og-bryggeri-oslo" title="Link til facebook-siden">Crowbar &amp; Bryggeri</a>, Torggata 32</strong>.</p>
 
-<p>
-Tema: 2013, Perl pÃ¥ UiO, Damian-besÃ¸k i Mars, $whatever.
-</p>
+<p>Tema: 2013, Perl på UiO, Damian-besøk i Mars, $whatever.</p> 
