--- a/statutes/2007-11-29.md
+++ b/statutes/2007-11-29.md
@@ -1,182 +1,145 @@
-  <p style="font-size: small;">Vedtatt p&aring; &aring;rsm&oslash;tet 2007-11-29.</p>
+---
+layout: default
+title: Vedtekter 29. november, 2007
+---
 
-  <hr />
+# Vedtekter 29. november, 2007
 
-  <h2>Art.1. Foreningens navn.</h2>
+<small>Vedtatt p&aring; &aring;rsm&oslash;tet 2007-11-29.</small>
 
-  <p>Foreningens navn er "Oslo Perl Mongers". Som forkortet
-  benevnelse p&aring; foreningen brukes "Oslo.pm".</p>
+## Art.1. Foreningens navn.
 
-  <h2>Art.2. Foreningens form&aring;l.</h2>
+Foreningens navn er "Oslo Perl Mongers". Som forkortet benevnelse p&aring;
+foreningen brukes "Oslo.pm".
 
-  <p>Oslo Perl Mongers er en forening som har som form&aring;l:</p>
+## Art.2. Foreningens form&aring;l.
 
-  <ul>
-    <li>Fremme bruken og bevisstheten av og rundt
-    programmeringsspr&aring;ket Perl og dets verkt&oslash;y og
-    kultur</li>
-  </ul>
+Oslo Perl Mongers er en forening som har som form&aring;l:
 
-  <p>Dette m&aring;let n&aring;s bl.a. gjennom:</p>
+* Fremme bruken og bevisstheten av og rundt programmeringsspr&aring;ket Perl og dets verkt&oslash;y og kultur
 
-  <ul>
-    <li>Tilby et faglig og sosialt treffsted for folk som er
-    interessert i programmeringsspr&aring;ket Perl</li>
+Dette m&aring;let n&aring;s bl.a. gjennom:
 
-    <li>Fungere som katalysator for fri programvare-prosjekter der
-    Perl benyttes aktivt</li>
+* Tilby et faglig og sosialt treffsted for folk som er interessert i programmeringsspr&aring;ket Perl
+* Fungere som katalysator for fri programvare-prosjekter der Perl benyttes aktivt
+* Avholde regelmessige medlemsm&oslash;ter
 
-    <li>Avholde regelmessige medlemsm&oslash;ter</li>
-  </ul>
+## Art.3. Medlemskap og kontigent.
 
-  <h2>Art.3. Medlemskap og kontigent.</h2>
+For &aring; v&aelig;re medlem i foreningen kreves kun at man er meldt p&aring;
+foreningens offisielle epost-liste for annonseringer. Foreningen har ingen
+kontigent.
 
-  <p>For &aring; v&aelig;re medlem i foreningen kreves kun at man
-  er meldt p&aring; foreningens offisielle epost-liste for
-  annonseringer. Foreningen har ingen kontigent.</p>
+## Art.4. Foreningens ledelse.
 
-  <h2>Art.4. Foreningens ledelse.</h2>
+Foreningens h&oslash;yeste myndighet er &aring;rsm&oslash;tet.
+&Aring;rsm&oslash;tet utpeker et styre som leder foreningens daglige
+virksomhet.
 
-  <p>Foreningens h&oslash;yeste myndighet er
-  &aring;rsm&oslash;tet. &Aring;rsm&oslash;tet utpeker et styre som
-  leder foreningens daglige virksomhet.</p>
+## Art.5. Styret.
 
-  <h2>Art.5. Styret.</h2>
+Styret best&aring;r av minst 3 og maks 6 medlemmer, inkludert leder. Leder
+skal velges ved s&aelig;rskilt valg. I tillegg skal det velges minst 1 og maks
+2 varamedlemmer. Leder, samtlige styremedlemmer og varamedlemmer velges for et
+&aring;r av gangen. Varamedlemmer har m&oslash;terett i styrets m&oslash;ter,
+men har bare stemmerett (i valgt rekkef&oslash;lge) dersom noen av styrets
+faste medlemmer har forfall.
 
-  <p>Styret best&aring;r av minst 3 og maks 6 medlemmer, inkludert
-  leder. Leder skal velges ved s&aelig;rskilt valg. I tillegg skal det
-  velges minst 1 og maks 2 varamedlemmer. Leder, samtlige
-  styremedlemmer og varamedlemmer velges for et &aring;r av
-  gangen. Varamedlemmer har m&oslash;terett i styrets m&oslash;ter, men har bare
-  stemmerett (i valgt rekkef&oslash;lge) dersom noen av styrets faste
-  medlemmer har forfall.</p>
+Styrets m&oslash;ter ledes av lederen. Hvis styret har fler enn 5 medlemmer,
+vil lederens stemme telle dobbelt ved stemmelikhet.  Det f&oslash;res
+protokoll over styrets forhandlinger dersom forhandlingene foreg&aring;r
+muntlig.
 
-  <p>Styrets m&oslash;ter ledes av lederen. Hvis styret har fler enn 5
-  medlemmer, vil lederens stemme telle dobbelt ved stemmelikhet.  Det
-  f&oslash;res protokoll over styrets forhandlinger dersom forhandlingene
-  foreg&aring;r muntlig.</p>
+## Art.6. &Aring;rsm&oslash;tet.
 
-  <h2>Art.6. &Aring;rsm&oslash;tet.</h2>
+Vanlig &aring;rsm&oslash;te avholdes innen utgangen av november m&aring;ned.
+Styret innkaller til m&oslash;tet via foreningens offisielle epost-liste for
+annonseringer med minst 3 ukers varsel.
 
-  <p>Vanlig &aring;rsm&oslash;te avholdes innen utgangen av
-  november m&aring;ned.
- Styret innkaller til m&oslash;tet via
-  foreningens offisielle epost-liste for annonseringer med minst 3
-  ukers varsel.</p>
+Innkallelsen skal inneholde:
 
-  <p>Innkallelsen skal inneholde:</p>
+* Forslag til &aring;rsberetning
+* Forslag til regnskap
+* Forslag til nytt styre
+* Forslag til budsjett
+* Forslag til vedtektsendringer
+* Mottatte forslag
 
-  <ul>
-    <li>Forslag til &aring;rsberetning</li>
+Forslag til vedtektsendringer m&aring; v&aelig;re styret i hende senest
+utgangen av august for &aring; kunne behandles p&aring; &aring;rsm&oslash;tet.
+Andre forslag som &oslash;nskes behandlet, m&aring; v&aelig;re styret i hende
+senest 1 uke f&oslash;r m&oslash;tet. Endringer i vedtektene trer i kraft
+etter at &aring;rsm&oslash;tet er slutt.
 
-    <li>Forslag til regnskap</li>
+Dagsorden for vanlig &aring;rsm&oslash;te:
 
-    <li>Forslag til nytt styre</li>
+* Valg av m&oslash;teleder
+* Valg av to medlemmer til &aring; undertegne protokollen
+* Innkallelsens lovlighet
+* &Aring;rsberetning
+* Regnskap
+* Valg av nytt styre og andre tillitsmenn:
+  * Leder
+  * Styremedlemmer
+  * Varamedlemmer
+  * Valgkomit&eacute; p&aring; 3 medlemmer
+  * Eventuelle andre valg etter forslag fra styret
+* Forslag til budsjett for kommende &aring;r
+* Forslag til endringer av vedtekter
+* Andre innkomne forslag
+* Eventuelt
 
-    <li>Forslag til budsjett</li>
+Alle medlemmer (pluss eventuelle andre invitert av styret) har m&oslash;te- og
+talerett. Medlemmer som har v&aelig;rt gyldig medlem (i henhold til pkt.3)
+siden innkallingen til &aring;rsm&oslash;tet har stemmerett.
+&Aring;rsm&oslash;tet er etter lovlig innkalling alltid beslutningsdyktig.
+Styret innkaller til m&oslash;tet via foreningens offisielle epost-liste for
+annonseringer med minst 3 ukers varsel.
 
-    <li>Forslag til vedtektsendringer</li>
+## Art.7. Ekstraordin&aelig;rt &aring;rsm&oslash;te.
 
-    <li>Mottatte forslag</li>
-  </ul>
+Ekstraordin&aelig;rt &aring;rsm&oslash;te skal holdes innen 5 uker n&aring;r
+styrets leder, eller to av styrets medlemmer eller 1/5 av de stemmeberettigede
+medlemmene krever det. P&aring; et ekstraordin&aelig;rt &aring;rsm&oslash;te
+kan kun behandles saker nevnt i innkallingen.
 
-  <p>Forslag til vedtektsendringer m&aring; v&aelig;re styret i hende senest
-  utgangen av august for &aring; kunne behandles p&aring; &aring;rsm&oslash;tet. Andre forslag
-  som &oslash;nskes behandlet, m&aring; v&aelig;re styret i hende senest 1 uke f&oslash;r
-  m&oslash;tet. Endringer i vedtektene trer i kraft etter at &aring;rsm&oslash;tet er
-  slutt.</p>
+## Art.8. Om styrets virksomhet.
 
-  <p>Dagsorden for vanlig &aring;rsm&oslash;te:</p>
+Med unntak av lederen (som blir valgt direkte av &aring;rsm&oslash;tet)
+bestemmer styret selv innbyrdes fordeling av arbeidsoppgaver. Styret skal
+imidlertid utpeke kasserer og sekret&aelig;r blant sine faste medlemmer.
+Styret er beslutningsdyktig n&aring;r minst 3 medlemmer (medregnet
+m&oslash;tende varamedlemmer) er tilstede. I spesielle tilfeller kan
+beslutninger fattes av styrets leder etter samr&aring;d med de andre
+styremedlemmene. Styret fastlegger program for foreningens aktiviteter, og
+koordinerer gjennomf&oslash;ringen av disse. Styret beslutter om de
+individuelle aktiviteter er kun for medlemmer og inviterte, eller om de er
+&aring;pne for alle.  Styret kan for spesielle arrangementer fastsette en
+deltakeravgift. Styret skal utarbeide og fremlegge for &aring;rsm&oslash;tet
+&aring;rsberetning og revidert regnskap, samt forslag til budsjett for
+kommende &aring;r. Styret representerer foreningens evt. eierinteresser.
+&Aring;rsm&oslash;tet fastsetter n&aelig;rmere regler for dekning av utgifter
+til styrets arbeid. Foreningens regnskaps&aring;r f&oslash;lger
+kalender&aring;ret.
 
-  <ul>
-    <li>Valg av m&oslash;teleder</li>
+## Art.9. &Oslash;konomi.
 
-    <li>Valg av to medlemmer til &aring; undertegne
-    protokollen</li>
+Om foreningens aktiviteter g&aring;r i overskudd, skal overskuddet benyttes
+til aktiviteter som er i tr&aring;d med foreningens form&aring;l.
 
-    <li>Innkallelsens lovlighet</li>
+## Art.10. Endring av vedtekter.
 
-    <li>&Aring;rsberetning</li>
+Vedtektene kan endres av &aring;rsm&oslash;tet etter forslag fra styret eller
+medlem etter reglene i Art.6. Vedtektsendringer skal for &aring; v&aelig;re
+vedtatt, ha flertall med minst 2/3 av de avgitte stemmer p&aring;
+&aring;rsm&oslash;tet. Avstemning om vedtektsendringer kan kreves &aring;
+v&aelig;re skriftlig, og blanke stemmer teller som avgitte stemmer.
 
-    <li>Regnskap</li>
+## Art.11. Oppl&oslash;sning.
 
-    <li>Valg av nytt styre og andre tillitsmenn:
-
-      <ul>
-        <li>Leder</li>
-
-        <li>Styremedlemmer</li>
-
-        <li>Varamedlemmer</li>
-
-        <li>Valgkomit&eacute; p&aring; 3 medlemmer</li>
-
-        <li>Eventuelle andre valg etter forslag fra styret</li>
-      </ul>
-    </li>
-
-    <li>Forslag til budsjett for kommende &aring;r</li>
-
-    <li>Forslag til endringer av vedtekter</li>
-
-    <li>Andre innkomne forslag</li>
-
-    <li>Eventuelt</li>
-  </ul>
-
-  <p>Alle medlemmer (pluss eventuelle andre invitert av styret) har
-  m&oslash;te- og talerett. Medlemmer som har v&aelig;rt gyldig medlem (i henhold
-  til pkt.3) siden innkallingen til &aring;rsm&oslash;tet har stemmerett. &Aring;rsm&oslash;tet
-  er etter lovlig innkalling alltid beslutningsdyktig.  Styret
-  innkaller til m&oslash;tet via foreningens offisielle epost-liste for
-  annonseringer med minst 3 ukers varsel.</p>
-
-
-
-  <h2>Art.7. Ekstraordin&aelig;rt &aring;rsm&oslash;te.</h2>
-
-  <p>Ekstraordin&aelig;rt &aring;rsm&oslash;te skal holdes innen 5 uker n&aring;r styrets
-  leder, eller to av styrets medlemmer eller 1/5 av de
-  stemmeberettigede medlemmene krever det. P&aring; et ekstraordin&aelig;rt
-  &aring;rsm&oslash;te kan kun behandles saker nevnt i innkallingen.</p>
-
-  <h2>Art.8. Om styrets virksomhet.</h2>
-
-  <p>Med unntak av lederen (som blir valgt direkte av &aring;rsm&oslash;tet)
-  bestemmer styret selv innbyrdes fordeling av arbeidsoppgaver. Styret
-  skal imidlertid utpeke kasserer og sekret&aelig;r blant sine faste
-  medlemmer. Styret er beslutningsdyktig n&aring;r minst 3 medlemmer
-  (medregnet m&oslash;tende varamedlemmer) er tilstede. I spesielle tilfeller
-  kan beslutninger fattes av styrets leder etter samr&aring;d med de andre
-  styremedlemmene. Styret fastlegger program for foreningens
-  aktiviteter, og koordinerer gjennomf&oslash;ringen av disse. Styret
-  beslutter om de individuelle aktiviteter er kun for medlemmer og
-  inviterte, eller om de er &aring;pne for alle.  Styret kan for spesielle
-  arrangementer fastsette en deltakeravgift. Styret skal utarbeide og
-  fremlegge for &aring;rsm&oslash;tet &aring;rsberetning og revidert regnskap, samt
-  forslag til budsjett for kommende &aring;r. Styret representerer
-  foreningens evt. eierinteresser.  &Aring;rsm&oslash;tet fastsetter n&aelig;rmere regler
-  for dekning av utgifter til styrets arbeid. Foreningens regnskaps&aring;r
-  f&oslash;lger kalender&aring;ret.</p>
-
-  <h2>Art.9. &Oslash;konomi.</h2>
-
-  <p>Om foreningens aktiviteter g&aring;r i overskudd, skal overskuddet
-  benyttes til aktiviteter som er i tr&aring;d med foreningens form&aring;l.</p>
-
-  <h2>Art.10. Endring av vedtekter.</h2>
-
-  <p>Vedtektene kan endres av &aring;rsm&oslash;tet etter forslag fra styret eller
-  medlem etter reglene i Art.6. Vedtektsendringer skal for &aring; v&aelig;re
-  vedtatt, ha flertall med minst 2/3 av de avgitte stemmer p&aring;
-  &aring;rsm&oslash;tet. Avstemning om vedtektsendringer kan kreves &aring; v&aelig;re
-  skriftlig, og blanke stemmer teller som avgitte stemmer.</p>
-
-  <h2>Art.11. Oppl&oslash;sning.</h2>
-
-  <p>Beslutning om oppl&oslash;sning av foreningen m&aring; skje p&aring; et vanlig
-  &aring;rsm&oslash;te, og m&aring; ha minst 2/3 flertall av de avgitte
-  stemmer. Skriftlig avstemning kan kreves som for
-  vedtektsendringer. Ved gyldig beslutning om oppl&oslash;sning skal
-  foreningens midler tilfalle et almennyttig form&aring;l, i tr&aring;d med
-  foreningens form&aring;lsparagraf, etter m&oslash;tets beslutning.</p>
+Beslutning om oppl&oslash;sning av foreningen m&aring; skje p&aring; et vanlig
+&aring;rsm&oslash;te, og m&aring; ha minst 2/3 flertall av de avgitte stemmer.
+Skriftlig avstemning kan kreves som for vedtektsendringer. Ved gyldig
+beslutning om oppl&oslash;sning skal foreningens midler tilfalle et
+almennyttig form&aring;l, i tr&aring;d med foreningens form&aring;lsparagraf,
+etter m&oslash;tets beslutning.
