--- a/statutes/2007-11-29.md
+++ b/statutes/2007-11-29.md
@@ -1,6 +1,9 @@
 ---
 layout: default
 title: Vedtekter 29. november, 2007
+redirect_from:
+- /vedtekter
+- /vedtekter.shtml
 ---
 
 # Vedtekter 29. november, 2007
