Add more "redirect_from" after checking https://www.google.no/search?q=site%3Aoslo.pm.org

--- a/statutes/2006-11-01.md
+++ b/statutes/2006-11-01.md
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: Vedtekter 1. november, 2006
+redirect_from:
+- vedtekter/vedtekter-2006-11-01.html
 ---
 
 # Vedtekter 1. november, 2006
