--- a/statutes/2007-11-29.md
+++ b/statutes/2007-11-29.md
@@ -4,6 +4,7 @@ title: Vedtekter 29. november, 2007
 redirect_from:
 - /vedtekter
 - /vedtekter.shtml
+- /vedtekter/vedtekter-2007-11-29.html
 ---
 
 # Vedtekter 29. november, 2007
