Changed board symlink and changed to markdown #3

--- a/board/2014-03-05.md
+++ b/board/2014-03-05.md
@@ -1,36 +1,31 @@
+---
+layout: default
+---
 
+# Oslo.pm sitt styre 2014
 
+Styret ble valgt inn p&aring; ekstraordin&aelig;rt &aring;rsm&oslash;te 2014-03-05.
 
-<h1>Oslo.pm sitt styre 2014</h1>
+---
 
-<p>Styret ble valgt inn p&aring; ekstraordin&aelig;rt &aring;rsm&oslash;te 2014-03-05.</p>
+## Leder
 
-<hr />
+* Karl Rune Nilsen (<a href="http://telenor.no/">Telenor Norge AS</a>)
 
-<h3>Leder</h3>
-<ul>
- <li>Karl Rune Nilsen (<a href="http://telenor.no/">Telenor Norge AS</a>)</li>
-</ul>
+## Styremedlemmer
 
-<h3>Styremedlemmer</h3>
-<ul>
- <li>Arne Sommer (<a href="http://tieto.no/">Tieto</a>)</li>
- <li>Marcus Ramberg (<a href="http://nordaaker.no/">Nordaaker AS</a>)</li>
- <li>Nicolas A. S.-J. Mendoza (<a href="http://startsiden.no/">ABC Startsiden AS</a>)</li>
- <li>Salve J. Nilsen (<a href="http://friprog.no/">Friprog.no</a>)</li>
-</ul>
+* Arne Sommer (<a href="http://tieto.no/">Tieto</a>)
+* Marcus Ramberg (<a href="http://nordaaker.no/">Nordaaker AS</a>)
+* Nicolas A. S.-J. Mendoza (<a href="http://startsiden.no/">ABC Startsiden AS</a>)
+* Salve J. Nilsen (<a href="http://friprog.no/">Friprog.no</a>)
 
-<h3>Varamedlemmer</h3>
-<ul>
- <li>Jan Henning Thorsen (<a href="http://telenor.no/">Telenor Norge AS</a>)</li>
- <li>Poul H. S&oslash;rensen (<a href="http://basefarm.no/">Basefarm ASA</a>)</li>
-</ul>
+## Varamedlemmer
 
-<h3>Valgkomit&eacute;</h3>
-<ul>
- <li>Nicolas A. S.-J. Mendoza (<a href="http://startsiden.no/">ABC Startsiden AS</a>)</li>
- <li>Torbj&oslash;rn Lindahl <!--  (<a href="http:///"></a>) --></li>
- <li>Salve J. Nilsen (<a href="http://code.foo.no/">Freelancer</a>)</li>
-</ul>
+* Jan Henning Thorsen (<a href="http://telenor.no/">Telenor Norge AS</a>)
+* Poul H. S&oslash;rensen (<a href="http://basefarm.no/">Basefarm ASA</a>)
 
+## Valgkomit&eacute;
 
+* Nicolas A. S.-J. Mendoza (<a href="http://startsiden.no/">ABC Startsiden AS</a>)
+* Torbj&oslash;rn Lindahl <!--  (<a href="http:///"></a>) -->
+* Salve J. Nilsen (<a href="http://code.foo.no/">Freelancer</a>)
