--- a/board/2016-11-02.md
+++ b/board/2016-11-02.md
@@ -1,31 +1,31 @@
-<h1>Oslo.pm's styre</h1>
+---
+layout: default
+---
 
-<p>Styret ble valgt inn p&aring; ordin&aelig;rt &aring;rsm&oslash;te 2016-11-02.</p>
+# Oslo.pm sitt styre 2017
 
-<hr />
+Styret ble valgt inn p&aring; ordin&aelig;rt &aring;rsm&oslash;te 2016-11-02.
 
-<h3>Leder</h3>
-<ul>
- <li>Karl Rune Nilsen</li>
-</ul>
+---
 
-<h3>Styremedlemmer</h3>
-<ul>
- <li>Nicolas A. S.-J. Mendoza</li>
- <li>Salve J. Nilsen</li>
- <li>Jan Henning Thorsen</li>
- <li>Marcus Ramberg</li>
-</ul>
+## Leder
 
-<h3>Varamedlemmer</h3>
-<ul>
- <li>Arne Sommer</li>
- <li>Geir Aalberg</li>
-</ul>
+* Karl Rune Nilsen
 
-<h3>Valgkomit&eacute;</h3>
-<ul>
- <li>Karl Rune Nilsen</li>
- <li>Nicolas A. S.-J. Mendoza</li>
- <li>Jan Henning Thorsen</li>
-</ul>
+## Styremedlemmer
+
+* Nicolas A. S.-J. Mendoza
+* Salve J. Nilsen
+* Jan Henning Thorsen
+* Marcus Ramberg
+
+## Varamedlemmer
+
+* Arne Sommer
+* Geir Aalberg
+
+## Valgkomit&eacute;
+
+* Karl Rune Nilsen
+* Nicolas A. S.-J. Mendoza
+* Jan Henning Thorsen
