Add and improve tags for a bunch of meetings
Also, fix some mojibake

--- a/_posts/2003-03-05-sosialt.md
+++ b/_posts/2003-03-05-sosialt.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+tags: event social
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
 <p>Oslo.pm har sosialt medlemsmøte <strong>5. mars 2003, klokken
