--- a/_posts/2003-04-02-sosialt.md
+++ b/_posts/2003-04-02-sosialt.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+tags: event social
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
 <p>Oslo.pm sitt medlemsmøte <strong>2. april 2003</strong> er blitt avlyst
