--- a/_posts/2005-01-05-sosialt.md
+++ b/_posts/2005-01-05-sosialt.md
@@ -1,8 +1,9 @@
 ---
+tags: event social
 layout: post
 title: Neste medlemsm&oslash;te i Oslo.pm
 ---
 <p>Oslo.pm har sosialt medlemsmøte <strong>5. januar 2005, klokken
 18:00</strong>. Vi satser på en hyggelig stund på
-<strong>[UBESTEMT], [STED] v/[OMRÃDE]</strong>.</p>
+<strong>[UBESTEMT], [STED] v/[OMRÅDE]</strong>.</p>
 
