--- a/404.md
+++ b/404.md
@@ -17,14 +17,22 @@ these resources instead?
 <form class="search-form form-inline" action="https://www.google.com/cse">
   <input name="cx" type="hidden" value="003216111130611352982:uvlrck5wffw">
   <input name="ie" type="hidden" value="UTF-8">
-  <input name="q" placeholder="npw, board, bylaws ..." type="search">
+  <input name="q" placeholder="npw, board, bylaws, ..." type="search">
   <button type="submit">Search Oslo.pm</button>
 </form>
 
 ## Search metacpan.org
 
-<form class="form-inline" action="https://metacpan.org//search">
+<form class="form-inline" action="https://metacpan.org/search">
   <input type="hidden" name="size" id="search-size" value="50">
   <input name="q" placeholder="Moo, Mojolicious, ..." type="search">
-  <button type="submit">Search CPAN</button>
+  <button type="submit">Search MetaCPAN</button>
+</form>
+
+## Search modules.perl6.org
+
+<form class="form-inline" action="https://modules.perl6.org/search">
+  <input type="hidden" name="size" id="search-size" value="50">
+  <input name="q" placeholder="Cro, IO, ..." type="search">
+  <button type="submit">Search Perl 6 modules</button>
 </form>
