Fixed mojoconf links and defined mojo2014 design

--- a/_posts/2014-05-24-mojoconf.md
+++ b/_posts/2014-05-24-mojoconf.md
@@ -9,8 +9,8 @@ Oslo.pm arrangerer Perl-konferanse 24. mai! Påmelding er åpnet, programmet er
 fullt og vi er klare for en lørdag fylt med noe av det beste Perl-miljøet har
 å tilby rundt web-teknologier. Velkommen!
 
-* <a href="http://mojoconf.org/mojo2014/">Mojoconf 2014</a>
-* <a href="http://mojoconf.org/mojo2014/purchase">Kjøp billett</a>
+* <a href="/mojo2014/">Mojoconf 2014</a>
+* <a href="http://act.yapc.eu/mojo2014/purchase">Kjøp billett</a>
 
 ## Mojolicious hackathon
 
@@ -19,6 +19,6 @@ bryr deg om <em>Mojolicious</em>, <em>real-time web</em>, eller relaterte
 tema, s&aring; er du hjertelig velkommen til &aring; delta!
 
 * Dato er søndag 25. mai 2014
-* <a href="http://mojoconf.org/mojo2014/purchase">Meld deg på</a> (det er gratis)
-* <a href="http://mojoconf.org/mojo2014/wiki?node=hackathon">Hva skjer på hackathonen?</a> (under utarbeide)
+* <a href="http://act.yapc.eu/mojo2014/purchase">Meld deg på</a> (det er gratis)
+* <a href="/mojo2014/wiki/hackathon">Hva skjer på hackathonen?</a> (under utarbeide)
 
